--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News App</title>
+    <title>News Website</title>
 </head>
 <body>
     
@@ -40,10 +40,85 @@
         <h1>...</h1>
         <p>...</p>
         <a href="...">Read more</a>
-        <!--Change to a button element if i need to-->
+        <!--Change to a button element if i need to!-->
     </div>
 </div>
 
+<div class="h2">
+     <p class="text-above"><i>...</i> </p>
+     <p class="text-below"><strong>...</strong></p>
+</div>
+
+
+ <div class="three-news-stories">
+
+    <div class="one">
+        <img src=... alt=...>
+        <div>Description</div>
+        <div class="mid-btns">
+            <button type="button">Read more</button>
+        </div>
+    </div>
+
+    <div class="two">
+        <img src=... alt=...>
+        <div>Description</div>
+        <div class="mid-btns">
+            <button type="button">Read more</button>
+        </div>
+    </div>
+
+    <div class="three">
+        <img src=... alt=...>
+        <div>Description</div>
+        <div class="mid-btns">
+            <button type="button">Read more</button>
+        </div>
+    </div>
+
+</div>
+
+<div class="mid-news">
+    
+    <div class="left-2">
+        <h1>...</h1>
+        <p>...</p>
+        <a href="...">Read more</a>
+        <!--Change to a button element if i need to!-->
+    </div>
+    <div class="right-2">
+        <img src="..." alt="...">
+    </div>
+</div>
+
+<div class="subscriptions">
+
+    <div class="one">
+        <p>.......</p>
+        <div class="sub-btns">
+            <button type="button">Subscribe</button>
+        </div>
+    </div>
+
+    <div class="two">
+        <p>.......</p>
+        <div class="sub-btns">
+            <button type="button">Subscribe</button>
+        </div>
+    </div>
+
+    <div class="three">
+        <p>.......</p>
+        <div class="sub-btns">
+            <button type="button">Subscribe</button>
+        </div>
+    </div>
+</div>
 
 </body>
+
+<footer class="footer">
+    <p>Copyright Leo Roberts 2022</p>
+</footer>
+
 </html>
