--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <header>
-        <h1 class="logo">
-            <img src="..." ref="...">
-        </h1>
-        <div class="top-menu">
-            <ul>
+    <header class="header">
+        <h1>LOGO</h1>
+            <ul class="menu">
+                <li>Home</li>
                 <li>Catagories</li>
-                <li>Top Stories</li>
+                <li>Subscription</li>
                 <li>About Us</li>
             </ul>
-        </div>
         <div class="top-buttons">
             <button class="sign-up" type="button">
                 LOG IN
@@ -28,7 +26,6 @@
                      SIGN UP
                  </button>
             </div>
-
         </div>
     </header>
     
