--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 </div>
 
 <div class="h2">
-     <p class="text-above"><i>...</i> </p>
-     <p class="text-below"><strong>...</strong></p>
+     <p class="text-above"><i><strong>...</strong></i> </p>
+     <p class="text-below">...</p>
 </div>
 
 
