--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
             <button type="button">Read more</button>
         </div>
     </div>
+</div>
 
+<div class="quote-box">
+   <div class="text">
+    <p><i>...</i> </p>
+    <p><strong>...</strong></p>
+    </div>
 </div>
 
 <div class="mid-news">
