added more images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
 <div class="top-section">
     <div class="left">
-        <img src="dinner.jpg" alt="Waving-friends">
+        <img src="dinner.jpg" alt="Waving-friends" class="image1">
     </div>
     <div class="right">
         <h1>Welcome to SCOOT</h1>
@@ -50,7 +50,7 @@
  <div class="three-news-stories">
 
     <div class="one">
-        <im src=... alt=...>
+        <img src="app.jpg" alt="app" class="image2">
             <div class="t1">
                 <p><strong>The best deals on true wireless earbuds right now</strong></p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non officiis exercitationem optio earum odio neque.</p>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="two">
-        <im src=... alt=...>
+        <img src="red.jpg" alt="Russia-Skull" class="image3">
         <div class="t1">
            <p><strong>More US internet backbone providers shutting down in Russia</strong></p>
            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non officiis exercitationem optio earum odio neque.</p>
@@ -72,7 +72,7 @@
     </div>
 
     <div class="three">
-        <im src=... alt=...>
+        <img src="jumping.jpg" alt="students-jumping" class="image4">
             <div class="t1">
                 <p><strong>The best deals on true wireless earbuds right now</strong></p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non officiis exercitationem optio earum odio neque.</p>
@@ -98,8 +98,9 @@
         <a href="...">Read more</a>
         <!--Change to a button element if i need to!-->
     </div>
+    
     <div class="right-2">
-        <im src="..." alt="...">
+        <img src="whatsapp.jpg" alt="Whatsapp-Logo" class="image5">
     </div>
 </div>
 
