finished layout, now text

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,7 +64,7 @@
     <div class="two">
         <img src="red.jpg" alt="Russia-Skull" class="image3">
         <div class="t1">
-           <p><strong>More US internet backbone providers shutting down in Russia</strong></p>
+           <p><strong>US internet providers shutting down in Russia</strong></p>
            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non officiis exercitationem optio earum odio neque.</p>
         </div>
         <div class="mid-btns">
@@ -94,7 +95,7 @@
     
     <div class="left-2">
         <h1><strong>WhatsApp’s new browser extension is aimed at making web chats more secure</strong></h1>
-        <p>Code Verify is a new browser extension from WhatsApp parent company Meta that aims to improve the security of WhatsApp’s web version, the company has announced. The extension works by verifying that the contents of WhatsApp’s web version haven’t been tampered with.</p>
+        <p class="para"> Code Verify is a new browser extension from WhatsApp parent company Meta that aims to improve the security of WhatsApp’s web version, the company has announced. The extension works by verifying that the contents of WhatsApp’s web version haven’t been tampered with.</p>
         <a href="...">Read more</a>
         <!--Change to a button element if i need to!-->
     </div>
@@ -106,7 +107,7 @@
 
 <div class="subscriptions">
 
-    <div class="one">
+    <div class="sub-one">
         <p><strong>Free package</strong></p>
         <ul>
             <li>This perk</li>
@@ -119,7 +120,7 @@
         </div>
     </div>
 
-    <div class="two">
+    <div class="sub-two">
         <p><strong>£5 per month</strong></p>
         <ul>
             <li>This perk</li>
@@ -132,7 +133,7 @@
         </div>
     </div>
 
-    <div class="three">
+    <div class="sub-three">
         <p><strong>£15 per month</strong></p>
        <ul>
         <li>This perk</li>
