--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://use.typekit.net/vsz5xjc.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,8 +35,8 @@
         <img src="dinner.jpg" alt="Waving-friends" class="image1">
     </div>
     <div class="right">
-        <h1>Welcome to SCOOT</h1>
-        <p>We are a medium commited to bringing you the latest news, around emerging technologies and how they affect culture, the economy, and politics.</p>
+        <h1 class="welcome">Welcome!</h1>
+        <p>We are a website commited to bringing you the latest <br>news, around emerging technologies and how they <br>affect culture, the economy, and politics.</p>
         <a href="...">Read more</a>
         <!--Change to a button element if i need to!-->
     </div>
@@ -44,7 +44,7 @@
 
 <div class="h2">
      <p class="text-above"><strong>Keep up to date with the news in your city</strong> </p>
-     <p class="text-below">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo facilis ipsum quis omnis ipsa aliquam earum voluptatibus ab aperiam quasi neque accusamus beatae assumenda molestiae error culpa minima, nulla molestias.</p>
+     <p class="text-below">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo facilis ipsum quis omnis ipsa aliquam earum voluptatibus ab aperiam quasi neque accusamus beatae assumenda molestiae error culpa minima, nulla molestias Lorem ipsum dolor sit.</p>
 </div>
 
 
@@ -53,8 +53,8 @@
     <div class="one">
         <img src="app.jpg" alt="app" class="image2">
             <div class="t1">
-                <p><strong>The best deals on true wireless earbuds right now</strong></p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non officiis exercitationem optio earum odio neque.</p>
+                <p class="news-tit"><strong>App revolutionising how people pay their bills</strong></p>
+                <p class="under-text">Lorem ipsum, dolor sit amet consectetur<br> adipisicing elit. Non officiis exercitationem optio <br>earum odio neque.</p>
              </div>
         <div class="mid-btns">
             <button type="button">Read more</button>
@@ -64,8 +64,8 @@
     <div class="two">
         <img src="red.jpg" alt="Russia-Skull" class="image3">
         <div class="t1">
-           <p><strong>US internet providers shutting down in Russia</strong></p>
-           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non officiis exercitationem optio earum odio neque.</p>
+           <p class="news-tit"><strong>US internet providers shutting down in Russia</strong></p>
+           <p class="under-text">Lorem ipsum, dolor sit amet consectetur <br>adipisicing elit. Non officiis exercitationem optio <br>earum odio neque.</p>
         </div>
         <div class="mid-btns">
             <button type="button">Read more</button>
@@ -75,8 +75,8 @@
     <div class="three">
         <img src="jumping.jpg" alt="students-jumping" class="image4">
             <div class="t1">
-                <p><strong>The best deals on true wireless earbuds right now</strong></p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non officiis exercitationem optio earum odio neque.</p>
+                <p class="news-tit"><strong>The best deals on true wireless earbuds</strong></p>
+                <p class="under-text">Lorem ipsum, dolor sit amet consectetur <br>adipisicing elit. Non officiis exercitationem optio<br> earum odio neque.</p>
              </div>
         <div class="mid-btns">
             <button type="button">Read more</button>
@@ -86,8 +86,8 @@
 
 <div class="quote-box">
    <div class="text">
-    <p><strong>'Computers are useless. They can only give you answers'</strong> </p>
-    <p>-Pablo Picasso</p>
+    <p class="comps"><strong>'Computers are useless. They can only give you answers'</strong> </p>
+    <p class="picas">-Pablo Picasso</p>
     </div>
 </div>
 
