--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <header class="header">
-        <h1>SCOOT</h1>
+        <h1 class="scoot" >SCOOT</h1>
             <ul class="menu">
                 <li>Home</li>
                 <li>Catagories</li>
@@ -37,7 +37,7 @@
     <div class="right">
         <h1 class="welcome">Welcome!</h1>
         <p>We are a website commited to bringing you the latest <br>news, around emerging technologies and how they <br>affect culture, the economy, and politics.</p>
-        <a href="...">Read more</a>
+        <a href="..." class="rm-below">Read more</a>
         <!--Change to a button element if i need to!-->
     </div>
 </div>
@@ -84,11 +84,8 @@
     </div>
 </div>
 
-<div class="quote-box">
-   <div class="text">
-    <p class="comps"><strong>'Computers are useless. They can only give you answers'</strong> </p>
-    <p class="picas">-Pablo Picasso</p>
-    </div>
+<div class="emoji">
+    <p class="hand"><strong>🖖  🍜   🌎   🍕   🧸   🔊   🚌 </strong> </p>
 </div>
 
 <div class="mid-news">
@@ -108,12 +105,13 @@
 <div class="subscriptions">
 
     <div class="sub-one">
-        <p><strong>Free package</strong></p>
-        <ul>
-            <li>This perk</li>
-            <li>This perk</li>
-            <li>This perk</li>
-            <li>This perk</li>
+        <p class="plan">Free Plan</p>
+        <p class="price"><strong>£0</strong>/mo</p>
+        <ul class="perks">
+            <li>- This perk</li>
+            <li>- This perk</li>
+            <li>- This perk</li>
+            <li>- This perk</li>
         </ul>
         <div class="sub-btns">
             <button type="button">Subscribe</button>
@@ -121,12 +119,13 @@
     </div>
 
     <div class="sub-two">
-        <p><strong>£5 per month</strong></p>
-        <ul>
-            <li>This perk</li>
-            <li>This perk</li>
-            <li>This perk</li>
-            <li>This perk</li>
+        <p class="plan">Standard Plan</p>
+        <p class="price"> <strong>£5</strong>/mo</p>
+        <ul class="perks">
+            <li>- This perk</li>
+            <li>- This perk</li>
+            <li>- This perk</li>
+            <li>- This perk</li>
         </ul>
         <div class="sub-btns">
             <button type="button">Subscribe</button>
@@ -134,12 +133,13 @@
     </div>
 
     <div class="sub-three">
-        <p><strong>£15 per month</strong></p>
-       <ul>
-        <li>This perk</li>
-        <li>This perk</li>
-        <li>This perk</li>
-        <li>This perk</li>
+        <p class="plan"> Advanced Plan</p>
+        <p class="price"><strong>£15</strong>/mo</p>
+       <ul class="perks">
+        <li>- This perk</li>
+        <li>- This perk</li>
+        <li>- This perk</li>
+        <li>- This perk</li>
         </ul>
         <div class="sub-btns">
             <button type="button">Subscribe</button>
