--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="top-buttons">
             <button class="button-50" role="button">LOG IN</button>
             <div class="log-in">
-                <button class="button-50" role="button"><i>SIGN UP</i></button>
+                <button class="button-51" role="button"><i>SIGN UP</i></button>
             </div>
         </div>
     </header>
@@ -35,7 +35,7 @@
     </div>
     <div class="right">
         <h1 class="welcome">Welcome</h1>
-        <p>We are a website commited to bringing you the latest <br>news, around emerging technologies and how they <br>affect culture, the economy, and politics.</p>
+        <p>We are a company commited to bringing you the latest <br>news, around emerging technologies and how they <br>affect culture, the economy, and politics.</p>
         <button class="button-32" role="button">Read more</button>
         <!--Change to a button element if i need to!-->
     </div>
