Landing page finished

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </body>
 
 <footer class="footer">
-    <p>Copyright Leo Roberts 2022</p>
+    <p class="foot">Copyright Leo Roberts 2022</p>
 </footer>
 
 </html>
