--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
         <img src="scoot.jpg" ref=logo class="scoot">
             <ul class="menu">
                 <li><strong>Home</strong></li>
-                <li><strong>Catagories</strong></li>
+                <div class="dropdown">
+                    <span><strong>Catagories</strong></span>
+                    <div class="dropdown-content">
+                    <p>Computing<br>
+                        Gaming<br>
+                        Home Entertainment<br>
+                        Mobile<br>
+                        Software</p>
+                    </div>
+                  </div>
                 <li><strong>Subscription</strong></li>
                 <li><strong>About Us</strong></li>
             </ul>
@@ -37,7 +46,6 @@
         <h1 class="welcome">Welcome</h1>
         <p>We are a company commited to bringing you the latest <br>news, around emerging technologies and how they <br>affect culture, the economy, and politics.</p>
         <button class="button-32" role="button">Read more</button>
-        <!--Change to a button element if i need to!-->
     </div>
 </div>
 
@@ -148,6 +156,8 @@
     </div>
 </div>
 
+  
+  
 </body>
 
 <footer class="footer">
